[package]
name = "tweet-memo"
version = "0.2.0"
edition = "2021"
description = "A CLI tool to record Twitter-style short memos in Markdown files"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
license = "MIT"
repository = "https://github.com/zaki-yama/tweet-memo"
readme = "README.md"
keywords = ["cli", "markdown", "memo", "notes", "twitter"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
